# phoenix

./: Cargo.toml  Makefile.toml  README.md  probe-rs.yaml
.cargo/: config.toml
.github/workflows/: build.yml
crates/common-arm/: Cargo.toml  memory.x
crates/common-arm/src/: lib.rs
crates/common-arm/src/drivers/: MS5611DriverSpecs.md  mod.rs  ms5611.rs
crates/common-arm/src/error/: hydra_error.rs
crates/common-arm/tests/: example.rs
crates/madgwick-test/: Cargo.toml
crates/madgwick-test/src/: lib.rs
crates/sbg-rs/: .gitignore  Cargo.toml  README.md  build.rs  toolchain.cmake  wrapper.h
crates/sbg-rs/src/: data_conversion.rs  lib.rs  sbg.rs
examples/rtic-playground/: Cargo.toml
examples/rtic-playground/src/: communication.rs  types.rs
examples/simple-playground/: Cargo.toml
examples/simple-playground/src/: main.rs
phoenix/: Cargo.toml
phoenix/src/: can_manager.rs  communication.rs  data_manager.rs  madgwick_service.rs  main.rs  sbg_manager.rs
phoenix/tests/: sd.rs
