[workspace]
resolver = "2"

members = ["phoenix", "examples/*", "crates/*"]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = ["phoenix", "examples/*"]

[profile.dev.package.sbg-rs]
opt-level = 0

[profile.release.package.sbg-rs]
opt-level = 0

[workspace.dependencies.stm32h7xx-hal]
git = "https://github.com/uorocketry/stm32h7xx-hal"
# We use 35 even though we have the 33. 
features = ["defmt", "rt", "stm32h735", "can", "rtc"]

[workspace.dependencies.serde]
version = "1.0.150"
default-features = false
features = ["derive"]

[workspace.dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[workspace.dependencies.cortex-m-rt]
version = "0.7.1"

[workspace.dependencies.embedded-hal]
version = "0.2.7"

[workspace.dependencies.nb]
version = "1.1.0"

[workspace.dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[workspace.dependencies.rtic-monotonics]
version = "2.0.2"
features = ["cortex-m-systick", "stm32h733vg"]

[workspace.dependencies.postcard] 
version = "1.0.2"

[workspace.dependencies.rtic-sync]
version = "1.3.0"

[workspace.dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"] 

[workspace.dependencies.defmt] 
version = "0.3.2"

[workspace.dependencies.fdcan]
version = "0.2"

[workspace.dependencies.defmt-rtt]
version = "0.4"

[workspace.dependencies.chrono]
git = "https://github.com/uorocketry/chrono"
default-features = false

[workspace.dependencies.heapless]
version = "0.7.16"

[workspace.dependencies.embedded-alloc]
version = "0.5.0"

[workspace.dependencies.messages]
git = "https://github.com/uorocketry/messages"

[workspace.dependencies.defmt-test]
version = "0.3.2"

[workspace.dependencies.madgwick]
version = "0.1.1"
