[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
rtic = { workspace = true }
rtic-monotonics = { workspace = true }
common-arm = { path = "../crates/common-arm" }
stm32h7xx-hal = { workspace = true }
postcard = { workspace = true }
defmt = { workspace = true}
fdcan = { workspace = true }
sbg-rs = { path = "../crates/sbg-rs" }
embedded-alloc = {workspace = true}
heapless = {workspace = true}
rtic-sync = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }
chrono = { workspace = true }
messages = { workspace = true }
madgwick = { workspace = true }

[dev-dependencies]
defmt-test = { workspace = true }

[[test]]
name = "sd"
harness = false

[[bin]]
name = "phoenix"
harness = false