[package]
name = "common-arm"
description = "Common embedded code for the boards"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
postcard = { version = "1.0.2", features = ["use-defmt"] }
defmt = {workspace = true}
defmt-rtt = {workspace = true}
heapless = "0.7.16"
derive_more = "0.99.17"
embedded-sdmmc = "0.3.0"
messages = {workspace = true}
embedded-hal = {workspace = true}
nb = {workspace = true}
stm32h7xx-hal = { workspace = true }
panic-probe = { workspace = true }

[dev-dependencies]
defmt-test = { workspace = true }

[[test]]
name = "example"
harness = false

[lib]
name = "common_arm"
harness = false