[package]
name = "simple-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
rtic = { workspace = true }
rtic-monotonics = { workspace = true }
common-arm = { path = "../../crates/common-arm" }
stm32h7xx-hal = { workspace = true }
postcard = { workspace = true }
defmt = { workspace = true }
fdcan = { workspace = true }
embedded-alloc = {workspace = true}
heapless = {workspace = true}
rtic-sync = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }
chrono = { workspace = true }
messages = {workspace = true}

[[bin]]
name = "simple-playground"
path = "src/main.rs"
test = false
doctest = false
bench = false
harness = false